trunk/Archive2/ec/3eb97d649ae8df/output
g++ ...:
main.cpp: In function 'int main(int, char**)':
main.cpp:45:3: error: static assertion failed: std::make_unique is not present!
   static_assert (has::make_unique::value, "std::make_unique is not present!");
   ^

g++ -DADD_MAKE_UNIQUE ...:
SUCCESS